fix(dark mode): remove defer from nav script, adjust dark mode toggle and dark class in html, add custom script in html files to retrieve mode preference so DOM loads with dark class and avoids flash of default mode

--- a/src/input.css
+++ b/src/input.css
@@ -22,7 +22,7 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 /* apply dark styling for body */
-body {
+body, html {
     @apply bg-white font-lexend text-lg text-blac;
 
     @variant dark {
